--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,28 +2,39 @@ cmake_minimum_required(VERSION 3.10)
 project(DiscordRichPresence C)
 
 set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD_REQUIRED ON)
 
-# Definir caminho do SDK do Discord RPC
+set(DISCORD_SDK_PATH "${CMAKE_SOURCE_DIR}/libs/discord_sdk")
+set(SAMEMORY_PATH "${CMAKE_SOURCE_DIR}/libs/samemory")
+
 if(WIN32)
     if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-        set(DISCORD_SDK_PATH "${CMAKE_SOURCE_DIR}/discord_sdk/win64-dynamic")
+        set(DISCORD_SDK_PATH "${DISCORD_SDK_PATH}/win64-dynamic")
     else()
-        set(DISCORD_SDK_PATH "${CMAKE_SOURCE_DIR}/discord_sdk/win32-dynamic")
+        set(DISCORD_SDK_PATH "${DISCORD_SDK_PATH}/win32-dynamic")
     endif()
-    set(DISCORD_LIB discord-rpc.lib)  # Usar o arquivo de importação, NÃO a DLL
+    set(DISCORD_LIB discord-rpc.lib)
 elseif(UNIX)
-    set(DISCORD_SDK_PATH "${CMAKE_SOURCE_DIR}/discord_sdk/linux-dynamic")
-    set(DISCORD_LIB discord-rpc)  # Sem extensão para facilitar compatibilidade
+    set(DISCORD_SDK_PATH "${DISCORD_SDK_PATH}/linux-dynamic")
+    set(DISCORD_LIB discord-rpc)
 endif()
 
-# Incluir diretórios de headers do Discord RPC
-include_directories(${DISCORD_SDK_PATH}/include)
+include_directories(${DISCORD_SDK_PATH}/include ${CMAKE_SOURCE_DIR}/libs/samemory ${CMAKE_SOURCE_DIR}/include)
 
-# Adicionar diretórios de bibliotecas
-link_directories(${DISCORD_SDK_PATH}/lib)
+link_directories(${DISCORD_SDK_PATH}/lib ${SAMEMORY_PATH}/lib)
 
-# Criar o executável
-add_executable(DiscordRichPresence src/main.c)
+add_executable(DiscordRichPresence 
+    src/main.c 
+    libs/samemory/process_utils.c 
+    libs/samemory/addresses.c 
+    libs/samemory/zones.c 
+    libs/samemory/player_data.c 
+    libs/samemory/weapons.c 
+    libs/samemory/vehicles.c
+)
 
-# Linkar as bibliotecas necessárias
-target_link_libraries(DiscordRichPresence ${DISCORD_LIB})
+if(WIN32)
+    target_link_libraries(DiscordRichPresence ${DISCORD_LIB} ws2_32)
+else()
+    target_link_libraries(DiscordRichPresence ${DISCORD_LIB} pthread)
+endif()
